[package]
name = "bike-balance"
version = "0.1.0"
authors = ["Tom Watson <tom.watson@kinesis.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kml = "^0.0.6"
chrono = "^0.4.19"
textplots = "^0.5.4"
itertools = "^0.10.0"
polars = { version = "^0.11.1", features = [ "temporal" ] }
